Fix OBW country vertical alignment

--- a/assets/css/wc-setup.scss
+++ b/assets/css/wc-setup.scss
@@ -1138,7 +1138,7 @@ h3.jetpack-reasons {
 	font-weight: 500;
 	margin-bottom: 0.5em;
 	margin-top: 0.85em;
-	display: inline-block;
+	display: block;
 }
 
 .location-input {
@@ -1152,7 +1152,7 @@ h3.jetpack-reasons {
 	font-size: 16px;
 	color: #444;
 	background-color: #fff;
-	display: inline-block;
+	display: block;
 
 	&.dropdown {
 		width: 100%;
